NetBSD Problem Report #51624

From www@NetBSD.org  Sat Nov 12 14:39:55 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 9BAB27A211
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 12 Nov 2016 14:39:55 +0000 (UTC)
Message-Id: <20161112143954.7DE197A2D8@mollari.NetBSD.org>
Date: Sat, 12 Nov 2016 14:39:54 +0000 (UTC)
From: n54@gmx.com
Reply-To: n54@gmx.com
To: gnats-bugs@NetBSD.org
Subject: Tracee process cannot see its appropriate parent when debugged by a tracer
X-Send-Pr-Version: www-1.0

>Number:         51624
>Category:       kern
>Synopsis:       Tracee process cannot see its appropriate parent when debugged by a tracer
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Nov 12 14:40:00 +0000 2016
>Closed-Date:    Sat Nov 12 20:53:42 +0000 2016
>Last-Modified:  Sat Nov 12 20:53:42 +0000 2016
>Originator:     Kamil Rytarowski
>Release:        NetBSD 7.99.42 amd64
>Organization:
TNF
>Environment:
NetBSD chieftec 7.99.42 NetBSD 7.99.42 (GENERIC) #0: Sat Nov 12 14:55:54 CET 2016  kamil@chieftec:/public/netbsd-tmp/sys/arch/amd64/compile/GENERIC amd64

With reverted: cvs rdiff -u -r1.2 -r1.3 src/sys/kern/sys_ptrace_common.c
>Description:
A process traced by a debugger is not able see its appropriate parent.
>How-To-Repeat:
cd /usr/tests/kernel
atf-run t_ptrace_wait6 | atf-report

Test attach5 verifies this aspect.

This test is going to be committed after acquiring PR number for this report.
>Fix:
N/A

>Release-Note:

>Audit-Trail:
From: "Kamil Rytarowski" <kamil@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51624 CVS commit: src/tests/kernel
Date: Sat, 12 Nov 2016 14:48:55 +0000

 Module Name:	src
 Committed By:	kamil
 Date:		Sat Nov 12 14:48:55 UTC 2016

 Modified Files:
 	src/tests/kernel: t_ptrace_wait.c

 Log Message:
 Add new test attach5 in t_ptrace_wait{4,6,id,pid}

 Assert that tracer sees its parent when attached to tracer.

 This test is designed only for wait(2) members with ability to specify the
 PID value. This propery excludes wait(2) and wait3(2).

 Add new helper macro ATF_TP_ADD_TC_HAVE_PID() enabing tests when
 TWAIT_HAVE_PID is defined.

 This test fails and is linked with the following issue: PR kern/51624.

 Sponsored by <The NetBSD Foundation>.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/tests/kernel/t_ptrace_wait.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51624 CVS commit: src/sys/kern
Date: Sat, 12 Nov 2016 14:42:47 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sat Nov 12 19:42:47 UTC 2016

 Modified Files:
 	src/sys/kern: kern_prot.c

 Log Message:
 PR/51624: Return the original parent for a traced process.


 To generate a diff of this commit:
 cvs rdiff -u -r1.119 -r1.120 src/sys/kern/kern_prot.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: kamil@NetBSD.org
State-Changed-When: Sat, 12 Nov 2016 21:53:42 +0100
State-Changed-Why:
Fixed by Christos
Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.