PR/51624: Return the original parent for a traced process.